# agentic_learning_with_google_adk

./: .coverage  .env.aws  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  linting.yml
development_tutor/: __init__.py  agent.py  prompt.py
development_tutor/shared_libraries/: __init__.py  constants.py
development_tutor/sub_agents/: __init__.py
tests/: conftest.py  test_litellm_agent.py
